2024-05-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/785ec74b92da4f91181ff7b1c89c8ae5ee19f1b6 ) and raygui ( https://github.com/raysan5/raygui/commit/7bb66e5c7f3e283995a43c68965ee82acc65637a )

2024-05-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/f62202198e35161a9fe394a14bbd1a7c655107ad ) and raygui ( https://github.com/raysan5/raygui/commit/12804826d01bfb636e36f816bda19eaa23b4ace7 )
	* Fixed constant redefinition warnings. (Ref.: https://github.com/raysan5/raylib/commit/33b32ca53a7817a9cfdb1840a8ab75fa7cb47723 https://github.com/raysan5/raylib/blob/f62202198e35161a9fe394a14bbd1a7c655107ad/src/config.h#L115-L121 )

2024-05-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/f1007554a0a8145060797c0aa8169bdaf2c1c6b8 ) and raygui ( https://github.com/raysan5/raygui/commit/a3a0e86e215145c28726e6f469f13d0aa6647a5e )

2024-04-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/e47ebec66134800e734710038ea4e5f070f3ef06 ) and raygui ( https://github.com/raysan5/raygui/commit/6f532337ff2d6dc14ba3a5f5b7ee63f9d90ff13b )

2024-04-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/414229bcf93816daaa253a82cd54fbd7b18e6449 ) and raygui ( https://github.com/raysan5/raygui/commit/0a9a9f897a16968444e10fea4fbac33ba1d5d640 )

2024-03-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/textures_bunnymark_plain.rb : Renamed from textures_bunnymark.rb
	* examples/textures_bunnymark_optimized.rb : Added

2024-03-24  vaiorabbit  <http://twitter.com/vaiorabbit>
