@@ -770,6 +770,11 @@
           "name": "DROPDOWN_ITEMS_SPACING",
           "value": 17,
           "description": "DropdownBox items separation"
+        },
+        {
+          "name": "DROPDOWN_ARROW_HIDDEN",
+          "value": 18,
+          "description": "DropdownBox arrow hidden"
         }
       ]
     },
@@ -823,6 +828,11 @@
           "name": "SCROLLBAR_SIDE",
           "value": 19,
           "description": "ListView scrollbar side (0-SCROLLBAR_LEFT_SIDE, 1-SCROLLBAR_RIGHT_SIDE)"
+        },
+        {
+          "name": "LIST_ITEMS_BORDER_WIDTH",
+          "value": 20,
+          "description": "ListView items border width"
         }
       ]
     },
