@@ -4500,6 +4500,17 @@
       ]
     },
     {
+      "name": "IsFileNameValid",
+      "description": "Check if fileName is valid for the platform/OS",
+      "returnType": "bool",
+      "params": [
+        {
+          "type": "const char *",
+          "name": "fileName"
+        }
+      ]
+    },
+    {
       "name": "LoadDirectoryFiles",
       "description": "Load directory filepaths",
       "returnType": "FilePathList",
@@ -5334,7 +5345,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6011,7 +6022,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6030,7 +6041,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6134,7 +6145,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6157,7 +6168,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6180,7 +6191,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6203,7 +6214,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6226,7 +6237,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6633,7 +6644,7 @@
           "name": "point"
         },
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -6689,6 +6700,29 @@
         {
           "type": "int",
           "name": "threshold"
+        }
+      ]
+    },
+    {
+      "name": "CheckCollisionCircleLine",
+      "description": "Check if circle collides with a line created betweeen two points [p1] and [p2]",
+      "returnType": "bool",
+      "params": [
+        {
+          "type": "Vector2",
+          "name": "center"
+        },
+        {
+          "type": "float",
+          "name": "radius"
+        },
+        {
+          "type": "Vector2",
+          "name": "p1"
+        },
+        {
+          "type": "Vector2",
+          "name": "p2"
         }
       ]
     },
@@ -9446,6 +9480,28 @@
       ]
     },
     {
+      "name": "TextToSnake",
+      "description": "Get Snake case notation version of provided string",
+      "returnType": "const char *",
+      "params": [
+        {
+          "type": "const char *",
+          "name": "text"
+        }
+      ]
+    },
+    {
+      "name": "TextToCamel",
+      "description": "Get Camel case notation version of provided string",
+      "returnType": "const char *",
+      "params": [
+        {
+          "type": "const char *",
+          "name": "text"
+        }
+      ]
+    },
+    {
       "name": "TextToInteger",
       "description": "Get integer value from text (negative values not supported)",
       "returnType": "int",
@@ -9557,7 +9613,7 @@
       "returnType": "void",
       "params": [
         {
-          "type": "Vector3 *",
+          "type": "const Vector3 *",
           "name": "points"
         },
         {
